adjusts in hyprland, waybar && added bluetooth icon

--- a/beige_mono/.config/waybar/style.css
+++ b/beige_mono/.config/waybar/style.css
@@ -6,7 +6,7 @@
 @define-color light-color #ffffff;
 
 /* -----------------------------------------------------
-* General 
+* General
 * ----------------------------------------------------- */
 
 * {
@@ -19,7 +19,7 @@ window#waybar {
   background-color: transparent;
   opacity: 1;
   transition-property: transparent;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
 }
 
 window#waybar > box {
@@ -30,7 +30,7 @@ window#waybar > box {
 }
 
 /* -----------------------------------------------------
-* Workspaces 
+* Workspaces
 * ----------------------------------------------------- */
 
 #workspaces {
@@ -162,7 +162,7 @@ window#waybar.empty #window {
   color: @light-color;
   font-size: 10px;
   font-weight: normal;
-  transition: all 0.0s linear;
+  transition: all 0s linear;
 }
 
 #taskbar button {
@@ -171,7 +171,7 @@ window#waybar.empty #window {
   margin: 0px;
   border-radius: 5px;
   padding: 0px 5px;
-  transition: all 0.0s linear;
+  transition: all 0s linear;
 }
 
 #taskbar button:hover {
@@ -180,7 +180,7 @@ window#waybar.empty #window {
   border-radius: 5px;
   padding: 0px;
   background-color: transparent;
-  transition: all 0.0s linear;
+  transition: all 0s linear;
 }
 
 #taskbar button:hover > box {
@@ -189,21 +189,23 @@ window#waybar.empty #window {
   border-radius: 5px;
   padding: 0px 5px;
   background-color: @main-light-color;
-  transition: all 0.0s linear;
+  transition: all 0s linear;
 }
 
 #taskbar.empty {
-  background:transparent;
-  border:0;
-  padding:0;
-  margin:0;
+  background: transparent;
+  border: 0;
+  padding: 0;
+  margin: 0;
 }
 
 /* -----------------------------------------------------
 * Hardware Group
 * ----------------------------------------------------- */
 
-#disk,#memory,#cpu {
+#disk,
+#memory,
+#cpu {
   opacity: 1;
   background-color: transparent;
   padding: 0px 10px;
@@ -291,7 +293,9 @@ window#waybar.empty #window {
 * Bluetooth
 * ----------------------------------------------------- */
 
-#bluetooth, #bluetooth.on, #bluetooth.connected {
+#bluetooth,
+#bluetooth.on,
+#bluetooth {
   opacity: 1;
   background-color: transparent;
   padding: 0px 10px;
@@ -328,7 +332,8 @@ window#waybar.empty #window {
   font-weight: bold;
 }
 
-#battery.charging, #battery.plugged {
+#battery.charging,
+#battery.plugged {
   opacity: 1;
   background-color: transparent;
   padding: 0px 10px;
@@ -340,10 +345,10 @@ window#waybar.empty #window {
 }
 
 @keyframes blink {
-to {
-  background-color: transparent;
-  color: white;
-}
+  to {
+    background-color: transparent;
+    color: white;
+  }
 }
 
 #battery.critical:not(.charging) {
@@ -378,10 +383,10 @@ to {
 }
 
 #tray.empty {
-  background:transparent;
-  border:0;
-  padding:0;
-  margin:0;
+  background: transparent;
+  border: 0;
+  padding: 0;
+  margin: 0;
 }
 
 #custom-updates {
