--- a/beige_mono/.config/waybar/style_light.css
+++ b/beige_mono/.config/waybar/style_light.css
@@ -6,7 +6,7 @@
 @define-color light-color #ffffff;
 
 /* -----------------------------------------------------
-* General 
+* General
 * ----------------------------------------------------- */
 
 * {
@@ -19,7 +19,7 @@ window#waybar {
   background-color: transparent;
   opacity: 1;
   transition-property: transparent;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 
 window#waybar > box {
@@ -57,7 +57,7 @@ tooltip > box {
 }
 
 /* -----------------------------------------------------
-* Workspaces 
+* Workspaces
 * ----------------------------------------------------- */
 
 #workspaces {
@@ -236,7 +236,13 @@ tooltip > box {
 * Main modules
 * ----------------------------------------------------- */
 
-#custom-menu,#custom-clipboard,#clock,#custom-screenshot,#network,#custom-updates,#custom-wlogout {
+#custom-menu,
+#custom-clipboard,
+#clock,
+#custom-screenshot,
+#network,
+#custom-updates,
+#custom-wlogout {
   opacity: 1;
   border-radius: 7px;
   font-size: 17px;
@@ -246,7 +252,13 @@ tooltip > box {
   color: @light-color;
 }
 
-#custom-menu:hover,#custom-clipboard:hover,#clock:hover,#custom-screenshot:hover,#network:hover,#custom-updates:hover,#custom-wlogout:hover {
+#custom-menu:hover,
+#custom-clipboard:hover,
+#clock:hover,
+#custom-screenshot:hover,
+#network:hover,
+#custom-updates:hover,
+#custom-wlogout:hover {
   transition: all 0.1s ease-in;
   background-color: @main-light-color;
   color: @dark-color;
@@ -278,15 +290,17 @@ tooltip > box {
   margin: 5px 7px 5px 11px;
 }
 
-/* #bluetooth, #bluetooth.on, #bluetooth.connected { */
-/*   padding: 0px 10px; */
-/*   margin: 7px 0px; */
-/* } */
+#bluetooth,
+#bluetooth.on,
+#bluetooth.connected {
+  padding: 0px 10px;
+  margin: 7px 0px;
+}
 
-/* #bluetooth.off { */
-/*   padding: 0px 10px; */
-/*   margin: 7px 0px; */
-/* } */
+#bluetooth.off {
+  padding: 0px 10px;
+  margin: 7px 0px;
+}
 
 #custom-updates {
   padding: 0px 14px;
@@ -302,7 +316,13 @@ tooltip > box {
 * Secondary Modules
 * ----------------------------------------------------- */
 
-#window,#wireplumber,#backlight,#disk,#memory,#cpu,#battery {
+#window,
+#wireplumber,
+#backlight,
+#disk,
+#memory,
+#cpu,
+#battery {
   opacity: 1;
   padding: 0px 2px;
   margin: 5px 8px;
@@ -314,14 +334,21 @@ tooltip > box {
   color: @dark-color;
 }
 
-#window:hover,#wireplumber:hover,#backlight:hover,#disk:hover,#memory:hover,#cpu:hover,#battery:hover {
+#window:hover,
+#wireplumber:hover,
+#backlight:hover,
+#disk:hover,
+#memory:hover,
+#cpu:hover,
+#battery:hover {
   transition: all 0.1s ease-in;
   background-color: @main-light-color;
 }
 
 /* Battery Animation */
 
-#battery.charging, #battery.plugged {
+#battery.charging,
+#battery.plugged {
   margin: 7px 0px;
   border-radius: 30px;
   background-color: transparent;
